--- a/latest-config.yml
+++ b/latest-config.yml
@@ -55,16 +55,18 @@ language-section:
   usage-price-set: "&aThe usage price of the warp &e{warp} 7ahas been set to &e${price}&a."
   give-assistant-interaction: "&ePlease enter the name of the player you wish to give assistant to (Type &a{cancel} &eto stop the interaction):"
   remove-assistant-interaction: "&ePlease enter the name of the player you wish to remove assistant from (Type &a{cancel} &eto stop the interaction):"
-  add-whitelist-interaction: "&ePlease enter the name of the player you wish to add to the whitelist (Type &a{cancel} &eto stop the interaction):"
-  remove-whitelist-interaction: "&ePlease enter the name of the player you wish to remove from the whitelist (Type &a{cancel} &eto stop the interaction):"
+  add-list-interaction: "&ePlease enter the name of the player you wish to add to the list (Type &a{cancel} &eto stop the interaction):"
+  list-interaction: "&ePlease enter the name of the player you wish to remove from the list (Type &a{cancel} &eto stop the interaction):"
   player-already-assistant: "&cThe player &e{player} &cis already an assistant for this warp."
   player-not-assistant: "&cThe player &e{player} &cis not an assistant for this warp."
   remove-assistant: "&aThe player &e{player} &ais no longer an assistant for the warp &e{warp}&a."
   give-assistant: "&aThe player &e{player} &ais now an assistant for the warp &e{warp}&a."
-  player-whitelisted: "&cThe player &e{player} &cis already whitelisted for this warp."
-  player-not-whitelisted: "&cThe player &e{player} &cis not whitelisted for this warp."
-  add-whitelist: "&aThe player &e{player} &ahas been added to the whitelist of the warp &e{warp}&a."
-  remove-whitelist: "&aThe player &e{player} &ahas been removed from the whitelist of the warp &e{warp}&a."
+  player-listed: "&cThe player &e{player} &cis already in the player list for this warp."
+  player-not-listed: "&cThe player &e{player} &cis not in the player list for this warp."
+  add-list: "&aThe player &e{player} &ahas been added to the player list of the warp &e{warp}&a."
+  remove-list: "&aThe player &e{player} &ahas been removed from the player list of the warp &e{warp}&a."
+  white-list: "&aThe player list has been set to &eWhite List&a."
+  black-list: "&aThe player list has been set to &eBlack List&a."
   add-command-interaction: "&ePlease enter the command you would like to add to the warp (Type &a{cancel} &eto stop the interaction):"
   add-command: "&eThe command &a{command} &eto the warp &a{warp}&e."
   remove-command-interaction: "&ePlease enter the index of the command you would like to remove from the warp (Type &a{cancel} &eto stop the interaction):"
@@ -144,6 +146,12 @@ language-section:
   blocked-world: "&cThis world is currently blocking warp actions."
   invalid-status: "&cThat status you entered was invalid. The available statuses are: &e{statuses}"
   status-set: "&aThe status of the warp &e{warp} &ahas been set to &e{status}&a!"
+  spawn-invalid: "&cThe spawn location is currently invalid. It must be set before it can be used."
+  teleport-spawn: "&aYou have been sent to the set spawn!"
+  spawn-set: "&aThe spawn has been set to your current location!"
+  spawn-set-first-join: "&aThe first join spawn has been set to your current location! (Make sure the option is enabled in the configuration)"
+  teleport-first-join-spawn: "&aWelcome to the server &e{player} &ayou have been sent to the first join spawn!"
+  spawns-cleared: "&aABoth the first join and normal spawn have been cleared!"
 
 # Here is where the MySQL connection can be configured.
 # (Note: Database tables are created and managed automatically. There is also no MySQL conversion to YAML file; therefore, use at your own risk.)
@@ -173,6 +181,14 @@ general-section:
   auto-save-log: true
   # This is the interval of the warp auto-save in seconds.
   auto-save-interval: 900
+  # If this is enabled, players will be forcefully sent to spawn on join (First join spawn will be skipped if invalid).
+  force-spawn: true
+  # If this is enabled and the option above is enabled, the player will only be sent to the first join spawn on there first log-in.
+  # (Note: If false and the option above is true, the player will be sent to a spawn regardless even if they have already joined before)
+  force-only-first-join: true
+  # The commands in the list below will be initiated in the console when a player joins for the very first time.
+  first-join-commands:
+    - "tell {player} Welcome {player} this is a command that has been sent to you for joining for the very first time!"
   # If this option is enabled, all warps found in the existing Essentials folder will be converted into HyperDrive warps.
   # (Note: No essentials warps will be removed; therefore, please disable this option after the conversion is complete.)
   essentials-converter: false
@@ -358,7 +374,7 @@ warp-icon-section:
   # {assistant-count}- replaced with warp's assistants count.
   # {theme} - replaced with the name of the icon theme currently in use by the warp.
   # {animation-set} - replaced with the name of the animation set.
-  # {whitelist-count} - The total of whitelisted players.
+  # {list-count} - The total of players in the player list.
   # {assistant-count} - The total of assistant players.
   # {likes} - The total likes.
   # {dislikes} - The total dislikes.
@@ -398,7 +414,7 @@ warp-icon-section:
     - "&a\u2714 &e{likes}   &r{like-bar}   &e{dislikes} &c\u2716"
     - ""
     - "&7Owner: &e{owner}"
-    - "&7Whitelist Count: &e{whitelist-count}"
+    - "&7Player List Count: &e{list-count}"
     - "&7Assistant Count: &e{assistant-count}"
     - "&7Warp Traffic/Popularity: &e{traffic}"
     - ""
@@ -642,7 +658,7 @@ edit-menu-section:
   items:
     rename-warp:
       # Available click actions: "rename", "relocate", "change-status", "change-name-color", "edit-description", "give-ownership", "give-assistant", "remove-assistant",
-      # "add-to-whitelist", "remove-from-whitelist", "change-usage-price", "add-command", "remove-command", "toggle-enchant-look", "change-animation-set", "change-icon-theme",
+      # "add-to-list", "remove-from-list", "toggle-white-list", "change-usage-price", "add-command", "remove-command", "toggle-enchant-look", "change-animation-set", "change-icon-theme",
       # "dispatch-command-console", "dispatch-command-player", "delete", and "open-custom-menu".
       # (Note: For the "dispatch-command-console", "dispatch-command-player", and "open-custom-menu" actions be sure to include a colon followed by the value.)
       click-action: "rename"
@@ -883,25 +899,26 @@ edit-menu-section:
       material: "GREEN_WOOL"
       durability: 0
       amount: 1
-    add-to-whitelist:
-      click-action: "add-to-whitelist"
+    add-to-list:
+      click-action: "add-to-list"
       click-message: ""
       fill-empty-slots: false
       click-sound: true
       sound-name: "UI_BUTTON_CLICK"
       usage-cost: 80
       permission: ""
-      display-name: "&aAdd To Whitelist"
+      display-name: "&aAdd To Player List"
       lore:
         - ""
         - "&7Usage Price: &e{usage-price}"
         - ""
-        - "&c&lINFO: &r&7The whitelist enables"
-        - "&7and disables automatically based on if"
-        - "&7there are any whitelisted players."
+        - "&c&lINFO: &r&7The list functionality"
+        - "&7is determined by whether White List"
+        - "&7mode is activated. If disabled, the"
+        - "&7list will turn into a blacklist."
         - ""
-        - "&eClick to add a player to the whitelist"
-        - "&eof the warp &a{warp-name}&e."
+        - "&eClick to add a player to the"
+        - "&elist of the warp &a{warp-name}&e."
       slot: 38
       use-player-head: false
       player-head-name: ""
@@ -955,25 +972,26 @@ edit-menu-section:
       material: "RED_WOOL"
       durability: 0
       amount: 1
-    remove-from-whitelist:
-      click-action: "remove-from-whitelist"
+    remove-from-list:
+      click-action: "remove-from-list"
       click-message: ""
       fill-empty-slots: false
       click-sound: true
       sound-name: "UI_BUTTON_CLICK"
       usage-cost: 80
       permission: ""
-      display-name: "&cRemove From Whitelist"
+      display-name: "&cRemove From Player List"
       lore:
         - ""
         - "&7Usage Price: &e{usage-price}"
         - ""
-        - "&c&lINFO: &r&7The whitelist enables"
-        - "&7and disables automatically based on if"
-        - "&7there are any whitelisted players."
+        - "&c&lINFO: &r&7The warp commands enable"
+        - "&7and disable automatically based on"
+        - "&7if there are any commands in the warp's"
+        - "&7command list."
         - ""
         - "&eClick to remove a player from the"
-        - "&ewhitelist of the warp &a{warp-name}&e."
+        - "&elist of the warp &a{warp-name}&e."
       slot: 42
       use-player-head: false
       player-head-name: ""
@@ -1025,6 +1043,28 @@ edit-menu-section:
       use-player-head: false
       player-head-name: ""
       material: "GRASS_BLOCK"
+      durability: 0
+      amount: 1
+    toggle-white-list:
+      click-action: "toggle-white-list"
+      click-message: ""
+      fill-empty-slots: false
+      click-sound: true
+      sound-name: "UI_BUTTON_CLICK"
+      usage-cost: 80
+      permission: ""
+      display-name: "&aCycle List Type"
+      lore:
+        - ""
+        - "&7Usage Price: &e{usage-price}"
+        - "&7Next List Type: &e{next-list-type}"
+        - ""
+        - "&eClick to switch the player list"
+        - "&ebetween whitelist and blacklist."
+      slot: 22
+      use-player-head: false
+      player-head-name: ""
+      material: "PAPER"
       durability: 0
       amount: 1
     change-animation-set:
