* re-adjusted the like-bar calculations to properly fill the bar in favor of the difference between likes and dislikes. * Removed exceptions from the warp icon building method to prevent complex algorithm issues picked up from the IDE. * Implemented a new check to make sure a warp does not already exist when loading in warps to avoid any case of overwriting. * Fixed an issue where the edit menu would not re-open in some cases after performing a non-chat-interaction related action. * Fixed a couple placeholder issues and added some of the same placeholders across the board.

--- a/config.yml
+++ b/config.yml
@@ -183,6 +183,8 @@ general-section:
   auto-save-interval: 900
   # If this is enabled, players will be forcefully sent to spawn on join (First join spawn will be skipped if invalid).
   force-spawn: true
+  # If this is enabled, players will be forced back to spawn on death.
+  force-death-spawn: true
   # If this is enabled and the option above is enabled, the player will only be sent to the first join spawn on there first log-in.
   # (Note: If false and the option above is true, the player will be sent to a spawn regardless even if they have already joined before)
   force-only-first-join: true
